<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pie"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/pie_chart" />
        <item
            android:id="@+id/nav_line"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/line_chart" />
        <item
            android:id="@+id/nav_bar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/bar_chart" />
        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/progress_bar" />
    </group>
</menu>