<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="statsData"
            type="com.example.chart.ui.stats.StatsData" />
        <variable
            name="statsViewModel"
            type="com.example.chart.ui.stats.StatsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/heading"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/pikachu"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subHeading"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="5dp"
            android:text="@string/total_capacity"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading" />

        <github.nisrulz.stackedhorizontalprogressbar.StackedHorizontalProgressBar
            android:id="@+id/stackedHorizontalProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="@{statsData.primaryProgress}"
            android:secondaryProgress="@{statsData.secondaryProgress}"
            android:progressDrawable="@drawable/custom_progress_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subHeading"
            app:layout_constraintVertical_bias="0.01999998" />

        <TextView
            android:id="@+id/filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filled"
            android:textSize="15sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/stackedHorizontalProgressBar"
            app:layout_constraintTop_toBottomOf="@+id/stackedHorizontalProgressBar"
            app:layout_constraintVertical_bias="0.01999998" />

        <TextView
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:textSize="15sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/stackedHorizontalProgressBar"
            app:layout_constraintTop_toBottomOf="@+id/stackedHorizontalProgressBar"
            app:layout_constraintVertical_bias="0.01999998" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnDetails"
            app:layout_constraintTop_toBottomOf="@+id/left"
            app:layout_constraintVertical_bias="0.012" />

        <Button
            android:id="@+id/btnDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> statsViewModel.startNavigating()}"
            android:text="@string/details"
            android:textAllCaps="false"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnReset"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filled"
            app:layout_constraintVertical_bias="0.012" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/black"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnReset"
            app:layout_constraintVertical_bias="0.04000002" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>