<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_border"
    android:paddingTop="10dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/subHeading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="5dp"
        android:text="@string/total_capacity"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <github.nisrulz.stackedhorizontalprogressbar.StackedHorizontalProgressBar
        android:id="@+id/stackedHorizontalProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressDrawable="@drawable/custom_progress_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subHeading"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filled"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/stackedHorizontalProgressBar"
        app:layout_constraintTop_toBottomOf="@+id/stackedHorizontalProgressBar"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/stackedHorizontalProgressBar"
        app:layout_constraintTop_toBottomOf="@+id/stackedHorizontalProgressBar"
        app:layout_constraintVertical_bias="0.01999998" />

</androidx.constraintlayout.widget.ConstraintLayout>